--- a/app/app.view.html
+++ b/app/app.view.html
@@ -1,3 +1,6 @@
 <h1> {{ title }} </h1>
-<a [routerLink]="['Heroes']">Heroes</a>
+<nav>
+	<a [routerLink] = "['Dashboard']">Dashboard</a>
+	<a [routerLink]="['Heroes']">Heroes</a>
+</nav>
 <router-outlet></router-outlet>
