--- a/app/heroes.view.html
+++ b/app/heroes.view.html
@@ -6,5 +6,9 @@
 		<span class="badge">{{hero.id}}</span> {{hero.name}}
 	</li>
 </ul>
-
-<my-hero-detail [hero]="selectedHero"></my-hero-detail>
+<div *ngIf="selectedHero">
+  <h2>
+    {{selectedHero.name | uppercase}} is my hero
+  </h2>
+  <button (click)="goToDetail()">View Details</button>
+</div>
